--- a/package.json
+++ b/package.json
@@ -43,10 +43,11 @@
 		"typescript": "^5.8.3"
 	},
 	"dependencies": {
-		"@benev/slate": "^0.3.9",
 		"@e280/lettuce": "^0.0.3",
 		"@e280/quay": "^0.0.0-2",
+		"@e280/sly": "^0.2.0-21",
 		"@e280/strata": "^0.0.0-8",
+		"@e280/stz": "^0.2.6",
 		"@ffmpeg/ffmpeg": "^0.12.15",
 		"@ffmpeg/util": "^0.12.2",
 		"@floating-ui/dom": "^1.7.1",
@@ -57,7 +58,7 @@
 		"ffprobe-wasm": "^0.3.1",
 		"gl-transitions": "^1.43.0",
 		"gsap": "^3.13.0",
-		"lit": "^3.3.0",
+		"lit": "^3.3.1",
 		"mediainfo.js": "^0.3.5",
 		"mp4box": "^0.5.4",
 		"opfs-tools": "^0.7.2",
