--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
 		"_tsc": "tsc",
 		"_scute": "scute -v",
 		"_coi": "cp node_modules/coi-serviceworker/coi-serviceworker.js x/",
-		"_ln": "run-s _ln-s _ln-assets",
+		"_ln": "run-s _ln-s _ln-assets _ln-nm",
 		"_ln-s": "ln -s \"$(realpath s)\" x/s",
-		"_ln-assets": "ln -s \"$(realpath assets)\" x/assets"
+		"_ln-assets": "ln -s \"$(realpath assets)\" x/assets",
+		"_ln-nm": "ln -s \"$(realpath node_modules)\" x/node_modules"
 	},
 	"author": "zenkyuv",
 	"license": "MIT",
@@ -52,7 +53,7 @@
 		"@ffmpeg/ffmpeg": "^0.12.15",
 		"@ffmpeg/util": "^0.12.2",
 		"@floating-ui/dom": "^1.7.1",
-		"@omnimedia/omnitool": "^1.1.0-10",
+		"@omnimedia/omnitool": "^1.1.0-14",
 		"@pixi/colord": "^2.9.6",
 		"@zip.js/zip.js": "^2.7.62",
 		"coi-serviceworker": "^0.1.7",
