update: omnitool & strata

--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
 		"@e280/quay": "^0.0.0-2",
 		"@e280/shiny": "^0.1.0-9",
 		"@e280/sly": "^0.2.0-25",
-		"@e280/strata": "^0.2.0-14",
+		"@e280/strata": "^0.2.2",
 		"@e280/stz": "^0.2.9",
 		"@ffmpeg/ffmpeg": "^0.12.15",
 		"@ffmpeg/util": "^0.12.2",
 		"@floating-ui/dom": "^1.7.1",
-		"@omnimedia/omnitool": "^1.1.0-33",
+		"@omnimedia/omnitool": "^1.1.0-35",
 		"@pixi/colord": "^2.9.6",
 		"@zip.js/zip.js": "^2.7.62",
 		"coi-serviceworker": "^0.1.7",
